--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -904,16 +904,31 @@ jobs:
               ls -la "$MACOS_DIR/"
               exit 1
             fi
-
             chmod +x "$BINARY_PATH"
 
-            echo "=== Signing App Bundle ==="
-            codesign --sign "$IDENTITY" --timestamp --options runtime --entitlements ./publish/entitlements.plist --force --deep --verbose=4 "$APP_DIR"
+            echo "=== Signing executable with entitlements ==="
+            codesign --sign "$IDENTITY" \
+              --timestamp \
+              --options runtime \
+              --entitlements ./publish/entitlements.plist \
+              --force \
+              --verbose=4 \
+              "$BINARY_PATH"
+
+            echo "=== Signing app bundle ==="
+            codesign --sign "$IDENTITY" \
+              --timestamp \
+              --options runtime \
+              --force \
+              --verbose=4 \
+              "$APP_DIR"
+
+            echo "=== Verifying signatures ==="
             codesign --verify --deep --strict --verbose=2 "$APP_DIR"
             codesign -dvvv "$APP_DIR" | grep -E "(Signature|timestamp|runtime|Authority)" || true
 
-            echo "=== Entitlements in signed app ==="
-            codesign -d --entitlements - "$APP_DIR/Contents/MacOS/Lighthouse"
+            echo "=== Entitlements in signed executable ==="
+            codesign -d --entitlements - "$BINARY_PATH"
 
             echo "✓ App bundle signed and verified successfully"
 
