--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -916,13 +916,8 @@ jobs:
             mv ./temp_binary/Lighthouse "$BINARY_PATH"
             rmdir ./temp_binary
 
-            echo "=== Signing app bundle ==="
-            codesign --sign "$IDENTITY" \
-              --timestamp \
-              --options runtime \
-              --force \
-              --verbose=4 \
-              "$APP_DIR"
+            echo "=== Signing app bundle ==="                       
+            codesign --sign "$IDENTITY" --timestamp --options runtime ---preserve-metadata=entitlements --force --deep --verbose=4 "$APP_DIR
 
             echo "=== Verifying signatures ==="
             codesign --verify --deep --strict --verbose=2 "$APP_DIR"
