--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1146,61 +1146,24 @@ jobs:
         - name: Run Lighthouse
           run: |
             echo "Starting Lighthouse..."
-            # Redirect stdout and stderr to files
-            /Applications/Lighthouse.app/Contents/MacOS/Lighthouse > lighthouse_stdout.log 2> lighthouse_stderr.log &
-            PID=$!
-            echo $PID > lighthouse.pid
-            echo "Started with PID: $PID"
-            
-            # Wait a bit and check if it's still alive
-            sleep 5
-            
-            if ps -p $PID > /dev/null 2>&1; then
-              echo "✓ Process is still running after 5 seconds"
-            else
-              echo "❌ Process died within 5 seconds"
-              echo "=== STDOUT ==="
-              cat lighthouse_stdout.log || echo "No stdout"
-              echo "=== STDERR ==="
-              cat lighthouse_stderr.log || echo "No stderr"
-              exit 1
-            fi
-
-        - name: Show captured output
-          if: always()
-          run: |
-            echo "=== STDOUT ==="
-            cat lighthouse_stdout.log || echo "No stdout file"
-            echo ""
-            echo "=== STDERR ==="
-            cat lighthouse_stderr.log || echo "No stderr file"
+            ./Lighthouse > lighthouse.log 2>&1 &
+          working-directory: /Applications/Lighthouse.app/Contents/MacOS
 
         - name: Wait for Lighthouse to start
           run: |
-            echo "Waiting for service to start..."
-            end=$((SECONDS+60))
+            end=$((SECONDS+30))
             while [ $SECONDS -lt $end ]; do
-              # Check if process is still running
-              if ! ps -p $(cat lighthouse.pid) > /dev/null 2>&1; then
-                echo "ERROR: Process died at ${SECONDS}s"
-                exit 1
-              fi
-              
-              # Try to connect to the service (try both possible ports)
-              if curl --silent --fail --insecure https://localhost:5001 2>/dev/null; then
-                echo "✓ Service is up at ${SECONDS}s!"
+              if curl --silent --fail --insecure https://localhost:5001; then
+                echo "Service is up!"
                 exit 0
               fi
-              
-              if [ $((SECONDS % 10)) -eq 0 ]; then
-                echo "Still waiting... (${SECONDS}s elapsed, process still running)"
-              fi
-              sleep 2
+              sleep 1
             done
-            
-            echo "❌ Timeout waiting for service (process still running but not responding)"
-            
+            echo "Timeout waiting for service"
             exit 1
+            cat lighthouse.log
+          working-directory: /Applications/Lighthouse.app/Contents/MacOS
+
 
         - name: Verify log files
           if: always()
