Fix job dependencies

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,7 +46,7 @@ jobs:
       e2e: ${{ needs.changes.outputs.e2e }}
 
   tag:
-    needs: [frontend, backend, e2etests]
+    needs: [frontend, backend, e2e]
     uses: ./.github/workflows/jobs/tag.yml
 
   packageapp:
