Update workflow path matching to include all CI YAML files

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,7 +17,7 @@ on:
       - "Lighthouse.Backend.Tests/**"
       - "Lighthouse.EndToEndTests/**"
       - "Lighthouse.Frontend/**"
-      - ".github/workflows/ci.yml"
+      - ".github/workflows/ci*.yml"
       - "examples/postgres/**"
   pull_request:
     branches: [ "main" ]
