Refactor permissions in CI workflow files to use specific permissions instead of write-all

--- a/.github/workflows/ci_docker.yml
+++ b/.github/workflows/ci_docker.yml
@@ -12,7 +12,8 @@ jobs:
     runs-on: ubuntu-latest
     if: github.ref == 'refs/heads/main' && github.actor != 'dependabot[bot]'
 
-    permissions: write-all
+    permissions:
+      packages: write
 
     steps:
       - uses: actions/checkout@v4
