--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,6 +34,10 @@ jobs:
     name: Verify Backend
     with:
       backend: ${{ needs.changes.outputs.backend }}
+      dotnet_version: ${{ env.DOTNET_VERSION }}
+    secrets:
+      LIGHTHOUSE_LICENSE_PRIVATE_KEY: ${{ secrets.LIGHTHOUSE_LICENSE_PRIVATE_KEY }}
+      SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
 
   frontend:
     needs: changes
@@ -41,6 +45,9 @@ jobs:
     name: Verify Frontend
     with:
       frontend: ${{ needs.changes.outputs.frontend }}
+    secrets:
+      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
 
   e2e:
     needs: changes
@@ -65,6 +72,7 @@ jobs:
     with:
       fileversion: ${{ needs.tag.outputs.fileversion }}
       version: ${{ needs.tag.outputs.version }}
+      dotnet_version: ${{ env.DOTNET_VERSION }}
   
   docker:
     needs: tag
@@ -74,6 +82,8 @@ jobs:
       packages: write
     with:
       fileversion: ${{ needs.tag.outputs.fileversion }}
+    secrets:
+      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   
   # Linux verification with EndToEnd tests
   verifysqlite:
@@ -84,6 +94,8 @@ jobs:
       actions: read
     with:
       version: ${{ needs.tag.outputs.version }}
+    secrets:
+      LIGHTHOUSE_LICENSE_PRIVATE_KEY: ${{ secrets.LIGHTHOUSE_LICENSE_PRIVATE_KEY }}
       
   verifypostgres:
     needs: [packageapp, tag]
@@ -93,6 +105,8 @@ jobs:
       actions: read
     with:
       version: ${{ needs.tag.outputs.version }}
+    secrets:
+      LIGHTHOUSE_LICENSE_PRIVATE_KEY: ${{ secrets.LIGHTHOUSE_LICENSE_PRIVATE_KEY }}
   
   # macOS signing and verification
   codesign-macos:
@@ -104,6 +118,13 @@ jobs:
     with:
       fileversion: ${{ needs.tag.outputs.fileversion }}
       version: ${{ needs.tag.outputs.version }}
+      dotnet_version: ${{ env.DOTNET_VERSION }}
+    secrets:
+      APPLE_CERTIFICATE_BASE64: ${{ secrets.APPLE_CERTIFICATE_BASE64 }}
+      APPLE_CERTIFICATE_PASSWORD: ${{ secrets.APPLE_CERTIFICATE_PASSWORD }}
+      APPLE_TEAM_ID: ${{ secrets.APPLE_TEAM_ID }}
+      APPLE_ID: ${{ secrets.APPLE_ID }}
+      APPLE_APP_PASSWORD: ${{ secrets.APPLE_APP_PASSWORD }}
 
   verifymacos:
     needs: [codesign-macos, tag]
@@ -114,6 +135,10 @@ jobs:
     with:
       version: ${{ needs.tag.outputs.version }}
       submission_id: ${{ needs.codesign-macos.outputs.submission_id }}
+    secrets:
+      APPLE_ID: ${{ secrets.APPLE_ID }}
+      APPLE_APP_PASSWORD: ${{ secrets.APPLE_APP_PASSWORD }}
+      APPLE_TEAM_ID: ${{ secrets.APPLE_TEAM_ID }}
   
   # Windows signing and verification
   codesign-windows:
@@ -146,3 +171,6 @@ jobs:
     with:
       fileversion: ${{ needs.tag.outputs.fileversion }}
       version: ${{ needs.tag.outputs.version }}
+    secrets:
+      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      RELEASE_CREATION_TOKEN: ${{ secrets.RELEASE_CREATION_TOKEN }}
