--- a/.github/workflows/ci_frontend.yml
+++ b/.github/workflows/ci_frontend.yml
@@ -6,6 +6,11 @@ on:
       frontend:
         required: true
         type: string
+    secrets:
+      GITHUB_TOKEN:
+        required: true
+      SONAR_TOKEN:
+        required: true
 
 jobs:
   frontend:
