--- a/.github/workflows/ci_packageapp.yml
+++ b/.github/workflows/ci_packageapp.yml
@@ -9,6 +9,9 @@ on:
       version:
         required: true
         type: string
+      dotnet_version:
+        required: true
+        type: string
 
 jobs:
   packageapp:
@@ -24,7 +27,7 @@ jobs:
       - name: Setup .NET
         uses: actions/setup-dotnet@v3
         with:
-          dotnet-version: ${{env.DOTNET_VERSION}}
+          dotnet-version: ${{ inputs.dotnet_version }}
 
       - uses: actions/setup-node@v4
         with:
