--- a/.github/workflows/ci_release.yml
+++ b/.github/workflows/ci_release.yml
@@ -9,6 +9,11 @@ on:
       version:
         required: true
         type: string
+    secrets:
+      GITHUB_TOKEN:
+        required: true
+      RELEASE_CREATION_TOKEN:
+        required: true
 
 jobs:
   release:
