--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,12 +2,6 @@ name: Build And Deploy Lighthouse
 
 env:
   DOTNET_VERSION: '10'  
-  SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-  AzureDevOpsLighthouseIntegrationTestToken: ${{ secrets.AZUREDEVOPSLIGHTHOUSEINTEGRATIONTESTTOKEN }}
-  JiraLighthouseIntegrationTestToken: ${{ secrets.JIRALIGHTHOUSEINTEGRATIONTESTTOKEN }}
-  AzureDevOpsLighthouseE2ETestToken: ${{secrets.AZUREDEVOPSLIGHTHOUSEE2ETESTTOKEN}}
-  LinearAPIKey: ${{ secrets.LINEARAPIKEY }}
 
 on:
   push:
@@ -35,9 +29,8 @@ jobs:
     with:
       backend: ${{ needs.changes.outputs.backend }}
       dotnet_version: ${{ env.DOTNET_VERSION }}
-    secrets:
-      LIGHTHOUSE_LICENSE_PRIVATE_KEY: ${{ secrets.LIGHTHOUSE_LICENSE_PRIVATE_KEY }}
-      SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+      
+    secrets: inherit
 
   frontend:
     needs: changes
@@ -45,9 +38,7 @@ jobs:
     name: Verify Frontend
     with:
       frontend: ${{ needs.changes.outputs.frontend }}
-    secrets:
-      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+    secrets: inherit
 
   e2e:
     needs: changes
@@ -82,8 +73,7 @@ jobs:
       packages: write
     with:
       fileversion: ${{ needs.tag.outputs.fileversion }}
-    secrets:
-      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    secrets: inherit
   
   # Linux verification with EndToEnd tests
   verifysqlite:
@@ -94,8 +84,7 @@ jobs:
       actions: read
     with:
       version: ${{ needs.tag.outputs.version }}
-    secrets:
-      LIGHTHOUSE_LICENSE_PRIVATE_KEY: ${{ secrets.LIGHTHOUSE_LICENSE_PRIVATE_KEY }}
+    secrets: inherit
       
   verifypostgres:
     needs: [packageapp, tag]
@@ -105,8 +94,7 @@ jobs:
       actions: read
     with:
       version: ${{ needs.tag.outputs.version }}
-    secrets:
-      LIGHTHOUSE_LICENSE_PRIVATE_KEY: ${{ secrets.LIGHTHOUSE_LICENSE_PRIVATE_KEY }}
+    secrets: inherit
   
   # macOS signing and verification
   codesign-macos:
@@ -119,12 +107,7 @@ jobs:
       fileversion: ${{ needs.tag.outputs.fileversion }}
       version: ${{ needs.tag.outputs.version }}
       dotnet_version: ${{ env.DOTNET_VERSION }}
-    secrets:
-      APPLE_CERTIFICATE_BASE64: ${{ secrets.APPLE_CERTIFICATE_BASE64 }}
-      APPLE_CERTIFICATE_PASSWORD: ${{ secrets.APPLE_CERTIFICATE_PASSWORD }}
-      APPLE_TEAM_ID: ${{ secrets.APPLE_TEAM_ID }}
-      APPLE_ID: ${{ secrets.APPLE_ID }}
-      APPLE_APP_PASSWORD: ${{ secrets.APPLE_APP_PASSWORD }}
+    secrets: inherit
 
   verifymacos:
     needs: [codesign-macos, tag]
@@ -135,10 +118,7 @@ jobs:
     with:
       version: ${{ needs.tag.outputs.version }}
       submission_id: ${{ needs.codesign-macos.outputs.submission_id }}
-    secrets:
-      APPLE_ID: ${{ secrets.APPLE_ID }}
-      APPLE_APP_PASSWORD: ${{ secrets.APPLE_APP_PASSWORD }}
-      APPLE_TEAM_ID: ${{ secrets.APPLE_TEAM_ID }}
+    secrets: inherit
   
   # Windows signing and verification
   codesign-windows:
@@ -171,6 +151,4 @@ jobs:
     with:
       fileversion: ${{ needs.tag.outputs.fileversion }}
       version: ${{ needs.tag.outputs.version }}
-    secrets:
-      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      RELEASE_CREATION_TOKEN: ${{ secrets.RELEASE_CREATION_TOKEN }}
+    secrets: inherit
