Make dotnet_version input optional with default value in CI workflow files

--- a/.github/workflows/ci_backend.yml
+++ b/.github/workflows/ci_backend.yml
@@ -7,8 +7,9 @@ on:
         required: true
         type: string
       dotnet_version:
-        required: true
+        required: false
         type: string
+        default: '10'
 
 jobs:
   backend:
