--- a/.github/workflows/ci_codesign-macos.yml
+++ b/.github/workflows/ci_codesign-macos.yml
@@ -10,8 +10,9 @@ on:
         required: true
         type: string
       dotnet_version:
-        required: true
+        required: false
         type: string
+        default: '10'
     outputs:
       submission_id:
         value: ${{ jobs.codesign-macos.outputs.submission_id }}
