--- a/.github/workflows/ci_packageapp.yml
+++ b/.github/workflows/ci_packageapp.yml
@@ -10,8 +10,9 @@ on:
         required: true
         type: string
       dotnet_version:
-        required: true
+        required: false
         type: string
+        default: '10'
 
 jobs:
   packageapp:
