--- a/.github/workflows/ci_verifysqlite.yml
+++ b/.github/workflows/ci_verifysqlite.yml
@@ -10,7 +10,11 @@ on:
 jobs:
   verifysqlite:
     runs-on: ubuntu-latest
-
+    env:
+      JiraLighthouseIntegrationTestToken: ${{ secrets.JIRALIGHTHOUSEINTEGRATIONTESTTOKEN }}
+      AzureDevOpsLighthouseE2ETestToken: ${{ secrets.AZUREDEVOPSLIGHTHOUSEE2ETESTTOKEN }}
+      LinearAPIKey: ${{ secrets.LINEARAPIKEY }}
+      
     steps:
       - uses: actions/checkout@v4
         with:
