--- a/.github/workflows/ci_codesign-macos.yml
+++ b/.github/workflows/ci_codesign-macos.yml
@@ -148,6 +148,16 @@ jobs:
                 <true/>
                 <key>LSUIElement</key>
                 <false/>
+
+                <!-- Sparkle Update Configuration -->
+                <key>SUFeedURL</key>
+                <string>https://github.com/LetPeopleWork/Lighthouse/releases/latest/download/appcast.xml</string>
+                <key>SUPublicEDKey</key>
+                <string>${{ secrets.SPARKLE_PUBLIC_KEY }}</string>
+                <key>SUEnableAutomaticChecks</key>
+                <true/>
+                <key>SUScheduledCheckInterval</key>
+                <integer>86400</integer>
             </dict>
             </plist>
             EOF
