--- a/.github/workflows/generate_appcast.yml
+++ b/.github/workflows/generate_appcast.yml
@@ -13,6 +13,9 @@ jobs:
     permissions:
       contents: write
 
+    env:
+      GH_TOKEN: ${{ github.token }}
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -25,18 +28,18 @@ jobs:
         run: |
           brew install pandoc
 
-      # - name: Download Sparkle tools
-      #   run: |
-      #     SPARKLE_VERSION="2.6.3"
-      #     curl -L "https://github.com/sparkle-project/Sparkle/releases/download/${SPARKLE_VERSION}/Sparkle-${SPARKLE_VERSION}.tar.xz" -o sparkle.tar.xz
-      #     tar -xf sparkle.tar.xz
-      #     sudo cp Sparkle-${SPARKLE_VERSION}/bin/generate_appcast /usr/local/bin/
-      #     chmod +x /usr/local/bin/generate_appcast
+      - name: Download Sparkle tools
+        run: |
+          SPARKLE_VERSION="2.6.3"
+          curl -L "https://github.com/sparkle-project/Sparkle/releases/download/${SPARKLE_VERSION}/Sparkle-${SPARKLE_VERSION}.tar.xz" -o sparkle.tar.xz
+          tar -xf sparkle.tar.xz
+          sudo cp Sparkle-${SPARKLE_VERSION}/bin/generate_appcast /usr/local/bin/
+          chmod +x /usr/local/bin/generate_appcast
 
-      # - name: Prepare private key
-      #   run: |
-      #     echo "${{ secrets.SPARKLE_PRIVATE_KEY }}" | base64 -d > private_key.pem
-      #     chmod 600 private_key.pem
+      - name: Prepare private key
+        run: |
+          echo "${{ secrets.SPARKLE_PRIVATE_KEY }}" | base64 -d > private_key.pem
+          chmod 600 private_key.pem
 
       - name: Get latest releases
         run: |
@@ -53,7 +56,12 @@ jobs:
 
       - name: Download DMGs and create notes
         run: |
+          if [ ! -f release_tags.txt ]; then
+            echo "No releases to process"
+            exit 0
+          fi
           while IFS= read -r tag; do
+            if [ -z "$tag" ]; then continue; fi
             echo "Processing release $tag"
             # For testing, skip DMG download since none exist yet
             # gh release download "$tag" --pattern "Lighthouse-osx-*.dmg" --dir updates/
@@ -69,6 +77,10 @@ jobs:
 
       - name: Generate appcast (testing mode)
         run: |
+          if [ ! -f release_tags.txt ]; then
+            echo "No releases to process"
+            exit 0
+          fi
           # For testing without DMGs, generate basic appcast XML
           cat > appcast.xml << 'EOF'
           <?xml version="1.0" encoding="utf-8"?>
@@ -108,4 +120,8 @@ jobs:
 
       - name: Upload appcast to latest release
         run: |
+          if [ ! -f appcast.xml ]; then
+            echo "No appcast.xml to upload"
+            exit 0
+          fi
           gh release upload "$LATEST_TAG" appcast.xml --clobber
