refactor: comment out Sparkle tools download step in appcast generation workflow

--- a/.github/workflows/generate_appcast.yml
+++ b/.github/workflows/generate_appcast.yml
@@ -28,13 +28,13 @@ jobs:
         run: |
           brew install pandoc
 
-      - name: Download Sparkle tools
-        run: |
-          SPARKLE_VERSION="2.6.3"
-          curl -L "https://github.com/sparkle-project/Sparkle/releases/download/${SPARKLE_VERSION}/Sparkle-${SPARKLE_VERSION}.tar.xz" -o sparkle.tar.xz
-          tar -xf sparkle.tar.xz
-          sudo cp Sparkle-${SPARKLE_VERSION}/bin/generate_appcast /usr/local/bin/
-          chmod +x /usr/local/bin/generate_appcast
+      # - name: Download Sparkle tools
+      #  run: |
+      #    SPARKLE_VERSION="2.6.3"
+      #    curl -L "https://github.com/sparkle-project/Sparkle/releases/download/${SPARKLE_VERSION}/Sparkle-${SPARKLE_VERSION}.tar.xz" -o sparkle.tar.xz
+      #    tar -xf sparkle.tar.xz
+      #    sudo cp Sparkle-${SPARKLE_VERSION}/bin/generate_appcast /usr/local/bin/
+      #    chmod +x /usr/local/bin/generate_appcast
 
       - name: Prepare private key
         run: |
