--- a/.github/workflows/generate_appcast.yml
+++ b/.github/workflows/generate_appcast.yml
@@ -69,24 +69,30 @@ jobs:
             exit 0
           fi
           mkdir -p updates/dmg
+          rm -f updates/dmg/manifest.csv
           while IFS= read -r tag; do
             if [ -z "$tag" ]; then continue; fi
             echo "Processing release $tag"
-            DMG_NAME="Lighthouse-osx-${tag}.dmg"
-            # Check if DMG exists for this release
-            if gh release view "$tag" --json assets --jq ".assets[].name" | grep -q "^${DMG_NAME}$"; then
-              echo "DMG found for $tag, downloading..."
-              gh release download "$tag" --pattern "${DMG_NAME}" --dir updates/dmg/
+            # Find any DMG asset for this release (be flexible with naming)
+            ASSET_NAME=$(gh release view "$tag" --json assets --jq '.assets[].name' | grep -E '\.dmg$' | head -1)
+            if [ -n "$ASSET_NAME" ]; then
+              echo "DMG found for $tag: $ASSET_NAME, downloading..."
+              gh release download "$tag" --pattern "$ASSET_NAME" --dir updates/dmg/
+              DMG_PATH="updates/dmg/$ASSET_NAME"
               # Sign the DMG
-              sign_update updates/dmg/"${DMG_NAME}" private_key.pem
-              # Get release body and create HTML notes
+              sign_update "$DMG_PATH" private_key.pem
+
+              # Get release body and create HTML notes (one notes file per tag)
               RELEASE_BODY=$(gh api repos/LetPeopleWork/Lighthouse/releases/tags/"$tag" | jq -r '.body')
-              NOTES_FILE="updates/Lighthouse-osx-${tag}.html"
+              NOTES_FILE="updates/notes-${tag}.html"
               if [ "$RELEASE_BODY" != "null" ] && [ -n "$RELEASE_BODY" ]; then
                 echo "$RELEASE_BODY" | pandoc -f markdown -t html > "$NOTES_FILE"
               else
                 echo "<p>No release notes available.</p>" > "$NOTES_FILE"
               fi
+
+              # Record mapping of tag -> asset name for later appcast generation
+              echo "${tag},${ASSET_NAME}" >> updates/dmg/manifest.csv
             else
               echo "No DMG found for $tag, skipping..."
             fi
@@ -108,30 +114,60 @@ jobs:
               <language>en</language>
           EOF
           
-          while IFS= read -r tag; do
-            DMG_NAME="Lighthouse-osx-${tag}.dmg"
-            DMG_PATH="updates/dmg/${DMG_NAME}"
-            if [ -f "$DMG_PATH" ]; then
-              RELEASE_INFO=$(gh api repos/LetPeopleWork/Lighthouse/releases/tags/"$tag")
-              TITLE=$(echo "$RELEASE_INFO" | jq -r .name)
-              PUB_DATE=$(echo "$RELEASE_INFO" | jq -r .published_at | sed 's/T/ /' | sed 's/Z//' | xargs -I {} date -j -f "%Y-%m-%d %H:%M:%S" {} +"%a, %d %b %Y %H:%M:%S +0000")
-              BODY_HTML=$(cat "updates/Lighthouse-osx-${tag}.html" 2>/dev/null || echo "<p>No notes</p>")
-              URL="https://github.com/LetPeopleWork/Lighthouse/releases/download/${tag}/${DMG_NAME}"
-              SIGNATURE=$(sign_update "$DMG_PATH" private_key.pem 2>/dev/null)
-              LENGTH=$(stat -f%z "$DMG_PATH")
-              
-              cat >> appcast.xml << EOF
-              <item>
-                <title>$TITLE</title>
-                <sparkle:version>$tag</sparkle:version>
-                <sparkle:shortVersionString>$tag</sparkle:shortVersionString>
-                <description><![CDATA[$BODY_HTML]]></description>
-                <pubDate>$PUB_DATE</pubDate>
-                <enclosure url="$URL" sparkle:version="$tag" sparkle:edSignature="$SIGNATURE" length="$LENGTH" type="application/octet-stream"/>
-              </item>
+          # Use manifest mapping (tag -> asset) if available
+          if [ -f updates/dmg/manifest.csv ]; then
+            while IFS=, read -r tag asset; do
+              if [ -z "$tag" ] || [ -z "$asset" ]; then continue; fi
+              DMG_PATH="updates/dmg/${asset}"
+              if [ -f "$DMG_PATH" ]; then
+                RELEASE_INFO=$(gh api repos/LetPeopleWork/Lighthouse/releases/tags/"$tag")
+                TITLE=$(echo "$RELEASE_INFO" | jq -r .name)
+                PUB_DATE=$(echo "$RELEASE_INFO" | jq -r .published_at | sed 's/T/ /' | sed 's/Z//' | xargs -I {} date -j -f "%Y-%m-%d %H:%M:%S" {} +"%a, %d %b %Y %H:%M:%S +0000")
+                BODY_HTML=$(cat "updates/notes-${tag}.html" 2>/dev/null || echo "<p>No notes</p>")
+                URL="https://github.com/LetPeopleWork/Lighthouse/releases/download/${tag}/${asset}"
+                SIGNATURE=$(sign_update "$DMG_PATH" private_key.pem 2>/dev/null)
+                LENGTH=$(stat -f%z "$DMG_PATH")
+                
+                cat >> appcast.xml << EOF
+                <item>
+                  <title>$TITLE</title>
+                  <sparkle:version>$tag</sparkle:version>
+                  <sparkle:shortVersionString>$tag</sparkle:shortVersionString>
+                  <description><![CDATA[$BODY_HTML]]></description>
+                  <pubDate>$PUB_DATE</pubDate>
+                  <enclosure url="$URL" sparkle:version="$tag" sparkle:edSignature="$SIGNATURE" length="$LENGTH" type="application/octet-stream"/>
+                </item>
           EOF
-            fi
-          done < release_tags.txt
+              fi
+            done < updates/dmg/manifest.csv
+          else
+            # Fallback: look for dmg files matching tag in updates/dmg/
+            while IFS= read -r tag; do
+              if [ -z "$tag" ]; then continue; fi
+              DMG_PATH=$(ls updates/dmg/*"${tag}"*.dmg 2>/dev/null | head -1)
+              if [ -f "$DMG_PATH" ]; then
+                ASSET=$(basename "$DMG_PATH")
+                RELEASE_INFO=$(gh api repos/LetPeopleWork/Lighthouse/releases/tags/"$tag")
+                TITLE=$(echo "$RELEASE_INFO" | jq -r .name)
+                PUB_DATE=$(echo "$RELEASE_INFO" | jq -r .published_at | sed 's/T/ /' | sed 's/Z//' | xargs -I {} date -j -f "%Y-%m-%d %H:%M:%S" {} +"%a, %d %b %Y %H:%M:%S +0000")
+                BODY_HTML=$(cat "updates/notes-${tag}.html" 2>/dev/null || echo "<p>No notes</p>")
+                URL="https://github.com/LetPeopleWork/Lighthouse/releases/download/${tag}/${ASSET}"
+                SIGNATURE=$(sign_update "$DMG_PATH" private_key.pem 2>/dev/null)
+                LENGTH=$(stat -f%z "$DMG_PATH")
+                
+                cat >> appcast.xml << EOF
+                <item>
+                  <title>$TITLE</title>
+                  <sparkle:version>$tag</sparkle:version>
+                  <sparkle:shortVersionString>$tag</sparkle:shortVersionString>
+                  <description><![CDATA[$BODY_HTML]]></description>
+                  <pubDate>$PUB_DATE</pubDate>
+                  <enclosure url="$URL" sparkle:version="$tag" sparkle:edSignature="$SIGNATURE" length="$LENGTH" type="application/octet-stream"/>
+                </item>
+          EOF
+              fi
+            done < release_tags.txt
+          fi
           
           cat >> appcast.xml << 'EOF'
             </channel>
