--- a/.github/workflows/generate_appcast.yml
+++ b/.github/workflows/generate_appcast.yml
@@ -32,15 +32,20 @@ jobs:
         run: |
           brew install jq
 
+      - name: Install Rosetta
+        run: |
+          softwareupdate --install-rosetta --agree-to-license
+
       - name: Download Sparkle tools
         run: |
           SPARKLE_VERSION="2.6.3"
           curl -L "https://github.com/sparkle-project/Sparkle/releases/download/${SPARKLE_VERSION}/Sparkle-${SPARKLE_VERSION}.tar.xz" -o sparkle.tar.xz
           tar -xf sparkle.tar.xz
-          sudo cp $(find . -name generate_appcast) /usr/local/bin/
-          sudo cp $(find . -name sign_update) /usr/local/bin/
-          chmod +x /usr/local/bin/generate_appcast
-          chmod +x /usr/local/bin/sign_update
+          cd Sparkle-${SPARKLE_VERSION}
+          sudo cp bin/generate_appcast /usr/local/bin/
+          sudo cp bin/sign_update /usr/local/bin/
+          sudo chmod +x /usr/local/bin/generate_appcast
+          sudo chmod +x /usr/local/bin/sign_update
 
       - name: Prepare private key
         run: |
@@ -80,7 +85,7 @@ jobs:
               gh release download "$tag" --pattern "$ASSET_NAME" --dir updates/dmg/
               DMG_PATH="updates/dmg/$ASSET_NAME"
               # Sign the DMG
-              arch -x86_64 sign_update "$DMG_PATH" private_key.pem
+              sign_update "$DMG_PATH" private_key.pem
 
               # Get release body and create HTML notes (one notes file per tag)
               RELEASE_BODY=$(gh api repos/LetPeopleWork/Lighthouse/releases/tags/"$tag" | jq -r '.body')
